--- a/index1.html
+++ b/index1.html
@@ -78,22 +78,33 @@ opacity: 1;
 .table{
     margin-top: 40px;
 }
+@media screen and (max-width:480px){
+    .footer{
+        width:100%;
+    }
+
+    .container{
+    position: absolute;
+    top: 230px;
+    left: 208px; 
+}
+.box{
+    position: absolute;
+    left: -176px;
+    top: 118px;
+    width: 300px;
+}
+td{
+    margin: 2px;
+}
+
+}
 </style>
 </head>
 <body>
     <footer class="footer">
         <h2 style>Tasks<span style="color:rgb(18, 178, 218)"> Lists</span></h2>
     </footer>
-   <!-- <footer class="footer">
-        <h2 style>Tasks<span style="color:rgb(18, 178, 218)"> Lists</span></h2>
-    </footer>
-    <div class="plus1">
-    <i class="fa-solid fa-circle-arrow-left text2"></i>
-    </div>
-    <div class="plus">
-    <div class="fa-sharp fa-solid fa-circle-plus text"></div>
-    <div class="text2">Add new Task</div>
-    </div>-->
     <div class="table">
     <table align="center" border="0" cellpadding="4" cellspacing="0" >
      <tbody>
