--- a/index1.html
+++ b/index1.html
@@ -97,7 +97,18 @@ opacity: 1;
 td{
     margin: 2px;
 }
-
+a1{
+margin-left: 10px;
+}
+a2{
+    margin-left: 10px;
+}
+b1{
+    margin-left: 10px;
+}
+b2{
+    margin-left: 10px;
+}
 }
 </style>
 </head>
@@ -109,26 +120,26 @@ td{
     <table align="center" border="0" cellpadding="4" cellspacing="0" >
      <tbody>
         <tr>
-            <td>
+            <td class="a1">
            <!-- <i style="font-size: 42px;" class="fa-solid fa-circle-arrow-left  "></i>-->
            <a href="index3.html"><i style="font-size: 42px;color: black;" class="fa-solid fa-circle-arrow-left"></i></a>
             </td>
             <td>
                 <table align="center" border="0" cellpadding="4" cellspacing="0">
                  <tbody>
-                    <tr>
+                    <tr class="b1">
                         <a style="text-decoration:none; color:white;" href="index3.html"> <td style="font-size: 25px;">Back</td></a>
                     </tr>
                  </tbody>   
                 </table> 
             </td>
-            <td>
+            <td class="a2">
                 <a href="index3.html"> <div class="fa-sharp fa-solid fa-circle-plus text"></div></a>
                 </td>
                 <td>
                     <table align="center" border="0" cellpadding="4" cellspacing="0">
                      <tbody>
-                        <tr>
+                        <tr class="b2">
                            <a style="text-decoration:none; color:white;" href="index3.html"><td style="font-size:20px;">Add New Task</td></a>
                         </tr>
                      </tbody>   
