--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <footer class="footer">
+    <nav>
+        <header>
         <h2>Tasks<span style="color:rgb(18, 178, 218)"> Lists</span></h2>
-    </footer>
+        </header>
     <div class="plus">
     <!--<div class="fa-sharp fa-solid fa-circle-plus text"></div>-->
-    <a href="index2.html"><i class="fa-sharp fa-solid fa-circle-plus text"></i></a>
+    <a href="index2.html"><i class="fa-sharp fa-solid fa-circle-plus text"></i></a><br><br><br><br>
     <div class="text2"><a style="text-decoration: none;color: black;" href="index2.html">Add new Task</a></div>
     </div>
     <div class="container">
